# threat-modelling-agentic-worklfow

./: .gitignore  Makefile  README.md
3_writing_file_after_every_step/: .gitignore  README.md  coordinator_agent.py  main.py  main_with_validation.py  pyproject.toml  workflow_diagram.md
3_writing_file_after_every_step/tools/: __init__.py  convert_to_csv.py
3_writing_file_after_every_step/validation/: validators.py
3_writing_file_after_every_step/worker_agent_tests/: test_mitigation_auditor.py  test_mitigation_planner.py  test_threat_identifier.py
3_writing_file_after_every_step/worker_agents/: __init__.py  common.py  mitigation_auditor.py  mitigation_planner.py  risk_assessor.py  threat_identifier.py
4_without_coordinator/: .coverage  .gitignore  LEARNINGS.md  Makefile  README.md  constants.py  context.md.example  coordinator_agent.py  main.py  main_as_cli.py  pyproject.toml  workflow_diagram.md
4_without_coordinator/tools/: __init__.py  convert_to_csv.py
4_without_coordinator/tutorials/: README.md  threat_identification.ipynb
4_without_coordinator/utils/: agent_factory.py  agent_run.py  messages_printing.py  parsers.py  setup_commands.py  workflow_run.py
4_without_coordinator/validation/: __init__.py  first_step_threats_json_validation.py  validators.py
4_without_coordinator/worker_agent_tests/: test_mitigation_auditor.py  test_mitigation_planner.py  test_risk_assessor.py  test_threat_identifier.py
4_without_coordinator/worker_agents/: __init__.py  common.py  mitigation_auditor.py  risk_assessor.py  threat_identifier.py
4_without_coordinator/workflow_agent_prompts/: mitigation_auditor.py
4_without_coordinator/workflow_agent_tests/: _common.py  test_mitigation_auditor.py  test_mitigation_planner.py  test_risk_assessor.py  test_threat_identifier.py
(+53 files in other folders)
