[project]
name = "threat-modelling-agentic-worklfow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai-agents>=0.1.0",
    "openai>=1.70.0",
    "python-dotenv>=1.1.0",
    "typer>=0.12.0",
]

[project.scripts]
threat-model = "main:app"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
