[project]
name = "threat-modelling-agentic-worklfow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "notebook>=7.6.0",
    "openai-agents>=0.1.0",
    "openai>=1.70.0",
    "python-dotenv>=1.1.0",
    "questionary>=2.1.1",
    "typer>=0.12.0",
]

[project.scripts]
threat-model = "main:app"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=7.1.0",
    "jupyter>=1.0.0",
    "ipykernel>=7.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
